--- a/app/src/main/res/layout/activity_lista_estoque.xml
+++ b/app/src/main/res/layout/activity_lista_estoque.xml
@@ -32,7 +32,7 @@
                     android:padding="16dp">
 
                 <TextView
-                        android:id="@+id/textViewItemValor"
+                        android:id="@+id/textView"
                         style="bold"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
