--- a/app/src/main/res/layout/recycler_view_item_cesta.xml
+++ b/app/src/main/res/layout/recycler_view_item_cesta.xml
@@ -6,8 +6,7 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="3dp"
         app:cardElevation="2dp"
-        app:cardUseCompatPadding="true"
-        app:cardBackgroundColor="#FFF095">
+        app:cardUseCompatPadding="true">
 
     <LinearLayout
             android:layout_width="match_parent"
