--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="primary_dark">#3D3D3D</color>
     <color name="primary_light">#00FF00</color>
     <color name="accent">#00DDFF</color>
-    <color name="accent_active">#63E7FF</color>
+    <color name="accent_active">#89EEFF</color>
     <color name="primary_text">#BDBDBD</color>
     <color name="secondary_text">#000000</color>
     <color name="icons">#FFFFFF</color>
