--- a/app/src/main/res/layout/activity_cadastrar_cliente.xml
+++ b/app/src/main/res/layout/activity_cadastrar_cliente.xml
@@ -1,161 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="br.com.rm.cfv.activities.cliente.CadastrarClienteActivity">
+        android:fillViewport="true">
 
-    <ScrollView android:layout_width="match_parent"
-                android:layout_height="match_parent"
-            android:id="@+id/scrollView">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+                android:id="@+id/textViewDadosPessoais"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:padding="8dp"
+                android:text="@string/cliente_sessao_dados_pessoais"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
-            <TextView   android:id="@+id/textViewDadosPessoais"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/primary_text"
-                        android:text="@string/cliente_sessao_dados_pessoais"
-                        android:textAllCaps="true"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
-                        android:padding="8dp"
-                        android:textAlignment="center"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginStart="8dp" />
+        <EditText
+                android:id="@+id/editTextId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:enabled="false"
+                android:hint="Id"
+                android:inputType="text"
+                android:visibility="gone" />
 
-            <EditText android:id="@+id/editTextNome"
-                      android:hint="@string/cliente_nome"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:inputType="text"
-                      android:layout_marginTop="8dp"
-                      app:layout_constraintTop_toBottomOf="@+id/textViewDadosPessoais"
-                      app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="8dp"/>
+        <EditText
+                android:id="@+id/editTextNome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:hint="@string/cliente_nome"
+                android:inputType="text" />
 
-            <EditText android:id="@+id/editTextTelefone"
-                      android:hint="@string/cliente_telefone"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:inputType="text"
-                      android:layout_marginTop="8dp"
-                      app:layout_constraintTop_toBottomOf="@+id/editTextNome"
-                      app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="8dp"/>
+        <EditText
+                android:id="@+id/editTextTelefone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:hint="@string/cliente_telefone"
+                android:inputType="text" />
 
-            <EditText android:id="@+id/editTextEmail"
-                      android:hint="@string/cliente_email"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:inputType="textEmailAddress"
-                      android:layout_marginTop="8dp"
-                      app:layout_constraintTop_toBottomOf="@+id/editTextTelefone"
-                      app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="8dp"/>
+        <EditText
+                android:id="@+id/editTextEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:hint="@string/cliente_email"
+                android:inputType="textEmailAddress" />
 
-            <EditText android:id="@+id/editTextCPF"
-                      android:hint="@string/cliente_CPF"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:inputType="number"
-                      android:layout_marginTop="8dp"
-                      app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
-                      app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="8dp"/>
+        <EditText
+                android:id="@+id/editTextCPF"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:hint="@string/cliente_CPF"
+                android:inputType="number" />
 
-            <EditText android:id="@+id/editTextDataNascimento"
-                      android:hint="@string/cliente_dataNascimento"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:inputType="number"
-                      android:layout_marginTop="8dp"
-                      app:layout_constraintTop_toBottomOf="@+id/editTextCPF"
-                      app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="8dp"/>
+        <EditText
+                android:id="@+id/editTextDataNascimento"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:hint="@string/cliente_dataNascimento"
+                android:inputType="number" />
 
-            <TextView   android:id="@+id/textViewEndereco"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/primary_text"
-                        android:text="@string/cliente_sessao_endereco"
-                        android:textAllCaps="true"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
-                        android:padding="8dp"
-                        android:textAlignment="center"
-                        app:layout_constraintTop_toBottomOf="@+id/editTextDataNascimento"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginStart="8dp" />
+        <TextView
+                android:id="@+id/textViewEndereco"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:padding="8dp"
+                android:text="@string/cliente_sessao_endereco"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
-            <EditText android:id="@+id/editTextEndereco"
-                      android:hint="@string/cliente_logradouro"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:inputType="text"
-                      android:layout_marginTop="8dp"
-                      app:layout_constraintTop_toBottomOf="@+id/textViewEndereco"
-                      app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="8dp"/>
+        <EditText
+                android:id="@+id/editTextEndereco"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:hint="@string/cliente_logradouro"
+                android:inputType="text" />
 
-            <EditText android:id="@+id/editTextNumero"
-                      android:hint="@string/cliente_numero"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:inputType="text"
-                      android:layout_marginTop="8dp"
-                      app:layout_constraintTop_toBottomOf="@+id/editTextEndereco"
-                      app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="8dp"/>
+        <EditText
+                android:id="@+id/editTextNumero"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:hint="@string/cliente_numero"
+                android:inputType="text" />
 
-            <EditText android:id="@+id/editTextComplemento"
-                      android:hint="@string/cliente_complemento"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:inputType="text"
-                      android:layout_marginTop="8dp"
-                      app:layout_constraintTop_toBottomOf="@+id/editTextNumero"
-                      app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="8dp"/>
+        <EditText
+                android:id="@+id/editTextComplemento"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:hint="@string/cliente_complemento"
+                android:inputType="text" />
 
-            <EditText android:id="@+id/editTextBairro"
-                      android:hint="@string/cliente_bairro"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:inputType="text"
-                      android:layout_marginTop="8dp"
-                      app:layout_constraintTop_toBottomOf="@+id/editTextComplemento"
-                      app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="8dp"/>
+        <EditText
+                android:id="@+id/editTextBairro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:hint="@string/cliente_bairro"
+                android:inputType="text" />
 
-            <EditText android:id="@+id/editTextUf"
-                      android:hint="@string/cliente_uf"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:inputType="text"
-                      android:layout_marginTop="8dp"
-                      app:layout_constraintTop_toBottomOf="@+id/editTextBairro"
-                      app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="8dp"/>
+        <EditText
+                android:id="@+id/editTextUf"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:hint="@string/cliente_uf"
+                android:inputType="text" />
 
-            <EditText android:id="@+id/editTextCidade"
-                      android:hint="@string/cliente_cidade"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:inputType="text"
-                      android:layout_marginTop="8dp"
-                      app:layout_constraintTop_toBottomOf="@+id/editTextUf"
-                      app:layout_constraintStart_toStartOf="parent"
-                      android:layout_marginStart="8dp"/>
+        <EditText
+                android:id="@+id/editTextCidade"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="50dp"
+                android:hint="@string/cliente_cidade"
+                android:inputType="text" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
+</ScrollView>
 
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
