--- a/app/src/main/res/layout/activity_departamento.xml
+++ b/app/src/main/res/layout/activity_departamento.xml
@@ -48,7 +48,7 @@
                           android:layout_height="wrap_content"
                           android:padding="16dp">
 
-                <TextView android:id="@+id/textViewItemValor"
+                <TextView android:id="@+id/textView"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:textColor="@color/primary_text"
