--- a/app/src/main/res/layout/list_view_item_meio_pagamento.xml
+++ b/app/src/main/res/layout/list_view_item_meio_pagamento.xml
@@ -1,43 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:cardCornerRadius="1dp"
+        app:cardElevation="2dp"
+        app:cardUseCompatPadding="true">
 
-    <androidx.cardview.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:orientation="vertical"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="1dp"
-            app:cardElevation="2dp"
-            app:cardUseCompatPadding="true">
+            android:padding="8dp">
 
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:padding="8dp">
+        <ImageView
+                android:id="@+id/imageViewIcon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:padding="4dp" />
 
-            <ImageView  android:id="@+id/imageViewIcon"
-                        android:background="@drawable/shape_circle_accent"
-                        android:layout_width="50dp"
-                        android:padding="4dp"
-                        android:layout_height="50dp"/>
+        <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="DINHEIRO"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
 
-            <TextView   android:id="@+id/textViewItemValor"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@android:color/black"
-                        android:textSize="14sp"
-                        android:text="DINHEIRO"
-                        android:textAlignment="center"
-                        android:padding="16dp"
-                        android:textAllCaps="true"/>
+    </LinearLayout>
 
-        </LinearLayout>
+</androidx.cardview.widget.CardView>
 
-    </androidx.cardview.widget.CardView>
-
-</LinearLayout>
