--- a/app/src/main/res/layout/recycler_view_item_default.xml
+++ b/app/src/main/res/layout/recycler_view_item_default.xml
@@ -4,9 +4,10 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="75dip"
         app:cardCornerRadius="3dp"
         app:cardElevation="2dp"
-        app:cardUseCompatPadding="true">
+        android:layout_margin="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
