--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -16,7 +16,7 @@
 
     <string-array name="list_item_debito_cliente">
         <item>Detalhes</item>
-        <item>Quitar Débito</item>
+        <!--<item>Quitar Débito</item>-->
         <item>Remover registro</item>
         <item>Cancelar</item>
     </string-array>
