--- a/app/src/main/res/layout/recycler_view_item_promissoria.xml
+++ b/app/src/main/res/layout/recycler_view_item_promissoria.xml
@@ -10,52 +10,59 @@
         android:layout_marginBottom="4dp"
         android:layout_marginStart="8dp">
 
-    <LinearLayout android:orientation="vertical"
+    <LinearLayout android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp">
 
-        <TextView android:id="@+id/textViewParcela"
-                android:layout_width="match_parent"
+        <TextView android:id="@+id/textViewVencimento"
+                android:layout_width="0dp"
+                android:layout_weight="3"
+                android:layout_height="50dp"
+                android:textStyle="bold"
+                android:text="10\nJUL\n2020"
+                android:maxLines="4"
+                android:textSize="14sp"/>
+
+        <TextView android:id="@+id/textViewObservacao"
+                android:layout_width="0dp"
+                android:layout_weight="4"
                 android:layout_height="wrap_content"
                 android:text="1º Parcela"
-                android:maxLines="2"
+                android:maxLines="4"
                 android:textSize="12sp"
                 android:textAllCaps="true"/>
 
-        <LinearLayout android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+        <LinearLayout android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_weight="4"
+                android:layout_height="wrap_content"
+                android:gravity="end">
 
             <TextView android:id="@+id/textViewValor"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
                     android:text="R$ 50,55"
+                    android:textStyle="bold"
                     android:maxLines="2"
                     android:textSize="20sp"
                     android:textAllCaps="true"
                     android:textColor="@android:color/black"/>
 
             <TextView android:id="@+id/textViewStatus"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:text="PENDENTE"
                     android:maxLines="2"
-                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textSize="12sp"
                     android:textAllCaps="true"
                     android:gravity="end"
                     android:textColor="@android:color/holo_red_dark"/>
 
         </LinearLayout>
-
-        <TextView android:id="@+id/textViewVencimento"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Vencimento: 12/12/2019"
-                android:maxLines="2"
-                android:textSize="12sp"/>
 
     </LinearLayout>
 
