--- a/app/src/main/res/layout/activity_detalhe_parcela_debito.xml
+++ b/app/src/main/res/layout/activity_detalhe_parcela_debito.xml
@@ -114,12 +114,13 @@
                 android:layout_height="1dp"
                 android:layout_marginBottom="8dp"/>
 
-            <androidx.appcompat.widget.SwitchCompat
-                    android:id="@+id/switchPagarTotal"
-                    android:checked="true"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Pagar Total"/>
+        <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switchPagarTotal"
+                android:checked="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="Pagar Total"/>
 
 
         <com.google.android.material.textfield.TextInputLayout
