--- a/app/src/main/res/layout/recycler_view_item_default.xml
+++ b/app/src/main/res/layout/recycler_view_item_default.xml
@@ -22,7 +22,8 @@
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="8dp"
-                  android:textSize="16sp"
+                  android:textSize="18sp"
+                  android:textAllCaps="true"
                   android:textColor="@android:color/black"/>
 
         <TextView android:id="@+id/textViewItemCodigo"
