--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#2e2e2e</color>
+    <color name="primary">#0160A6</color>
+    <color name="primary_dark">#3C7DF8</color>
+    <color name="primary_light">#0067FF</color>
+    <color name="accent">#79BAFF</color>
+    <color name="accent_active">#0C7CF8</color>
+    <color name="primary_text">#FFFFFF</color>
+    <color name="secondary_text">#000000</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#BDBDBD</color>
+    <color name="bg_black_transparencia">#D2000000</color>
+    <color name="color_success">#16FF2D</color>
+    <color name="color_error">#FF1616</color>
+    <color name="color_alert">#FFBD16</color>
+    <!--<color name="primary">#2e2e2e</color>
     <color name="primary_dark">#3D3D3D</color>
     <color name="primary_light">#00FF00</color>
     <color name="accent">#00DDFF</color>
@@ -12,5 +25,5 @@
     <color name="bg_black_transparencia">#D2000000</color>
     <color name="color_success">#16FF2D</color>
     <color name="color_error">#FF1616</color>
-    <color name="color_alert">#FFBD16</color>
+    <color name="color_alert">#FFBD16</color>-->
 </resources>
